k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quickstart-chat
  labels:
    app: quickstart-chat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quickstart-chat
  template:
    metadata:
      labels:
        app: quickstart-chat
    spec:
      containers:
        - name: quickstart-chat
          image: ghcr.io/jeammm/quickstart-chat:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
