k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickstart-chat
  labels:
    app: quickstart-chat
spec:
  type: ClusterIP
  selector:
    app: quickstart-chat
  ports:
    - name: http
      port: 80
      targetPort: 80
